fix text align in jumbotron

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ nav {
     font-weight: bold;
     /*margin-left: 350px;*/
     opacity: .9;
-    padding-left: 20%;
+    padding-left: 30%;
     text-align: center;
    
 }
